# rocketseat-flask-mvc

./: .gitignore  pyproject.toml
init/: schema.sql
src/controllers/: person_creator_controller.py  person_finder_controller.py  pet_deleter_controller.py  pet_finder_controller.py
src/controllers/interfaces/: person_creator_controller.py  person_finder_controller.py  pet_deleter_controller.py  pet_finder_controller.py
src/errors/: error_handler.py
src/errors/errortypes/: http_bad_request.py  http_not_found.py  http_unprocessable_entity.py
src/main/composer/: person_creator_composer.py  person_finder_composer.py  pet_deleter_composer.py  pet_finder_composer.py
src/main/routes/: person_routes.py  pet_route.py
src/main/server/: server.py
src/models/sqlite/entities/: people.py  pet.py
src/models/sqlite/interfaces/: people_repository.py  pet_repository.py
src/models/sqlite/repositories/: people_repository.py  pet_repository.py
src/models/sqlite/settings/: connection.py
src/validators/: person_creator_validator.py
src/views/: person_creator_view.py  person_finder_view.py  pet_deleter_view.py  pet_finder_view.py
src/views/interfaces/: view_interface.py
tests/controllers/: person_creator_controller_test.py  person_finder_controller_test.py  pet_deleter_controller_test.py  pet_finder_controller_test.py
tests/models/sqlite/repositories/: pet_repository_test.py  repositories_test.py
tests/src/models/sqlite/settings/: connection_test.py
tests/validators/: person_creator_validator_test.py
