[project]
name = "rocketseat-flask-mvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "mock-alchemy>=0.2.6",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "sqlalchemy>=2.0.40",
]
